# input

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  Taskfile.yaml  main.py  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: deploy.yaml
docs/: Taskfile.yaml  book.toml
docs/src/: 99.md  SUMMARY.md  aws-azs.md  aws.md  docker.md  k8s-issues.md  k8s.md  terraform.md
