[tool.poetry]
name = "app_input"
version = "0.1.0"
description = "I take input"
authors = ["Mark Sharpley <698889+markopolo123@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app_input" }]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
